Fixed the nav bar links & presentation

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title></title>
@@ -8,34 +8,48 @@
 </head>
 
 <body>
-    <nav class ="topnav">
-    <a class="active" href="./index.html">Home</a>
-    <a href="./latest_news.html">Latest Financial News</a>
-    <a href="./contact.html">Contact Us</a>
-
-    <div>
+  <nav class="topnav">
+      <a class="active" href="./index.html">Home</a>
+      <a href="./latest_news.html">Latest Financial News</a>
+      <a href="./contact.html">Contact Us</a>
+    <div id = "login">
       <a href="./register_login.html" id="login">Login or Register</a>
-    </nav>
-      </div>
- 
-      <section class = "splash-main">
-        <p>FINTECH TRADING <br>- START YOUR INVESTMENTS TODAY!</p>
-        <button class="get-started"> Get Started!</button>
-        </section>
-      
-        <section class = "below-splash-main">
-          <p>"At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat."</p>
-          </section>
-      </section>
-    </section>
+    </div>
+  </nav>
+
+
+  <section class="splash-main">
+    <p>FINTECH TRADING <br>- START YOUR INVESTMENTS TODAY!</p>
+    <button class="get-started"> Get Started!</button>
+  </section>
+
+  <section class="below-splash-main">
+    <p>"At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque
+      corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa
+      qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita
+      distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime
+      placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut
+      officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non
+      recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias
+      consequatur aut perferendis doloribus asperiores repellat."</p>
+  </section>
+  </section>
+  </section>
 </body>
 <footer>Year 3 Group Project - Munster Technological University
-
+  <ul class="footer-list">
+    <li><a href="./index.html">Home</a></li>
+    <li><a href="./register_login.html">Login or Register</a></li>
+    <li><a href="./about.html">About</a></li>
+    <li><a href="./contact.html">Contact</a></li>
+    0
 </footer>
-      </html>
-      
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-  <script>
-  </script>
+
+</html>
+
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+<script>
+</script>
 </body>
+
 </html>
