--- a/public/latest_news.html
+++ b/public/latest_news.html
@@ -1,6 +1,6 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title></title>
@@ -8,15 +8,15 @@
 </head>
 
 <body>
-    <nav class ="topnav">
-    <a class="active" href="./index.html">Home</a>
-    <a href="./latest_news.html">Latest Financial News</a>
-    <a href="./contact.html">Contact Us</a>
-
-    <div>
+  <nav class="topnav">
+      <a class="active" href="./index.html">Home</a>
+      <a href="./latest_news.html">Latest Financial News</a>
+      <a href="./contact.html">Contact Us</a>
+    <div id = "login">
       <a href="./register_login.html" id="login">Login or Register</a>
-    </nav>
-      </div>
+    </div>
+  </nav>
+
  
       <section class = "splash-main">
         <p>Latest Financial News</p>
