--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,7 @@
   <title></title>
   <link href="style.css" rel="stylesheet" />
 </head>
-
-<body>
-  <nav class="topnav">
+<nav class="topnav">
       <a class="active" href="./index.html">Home</a>
       <a href="./latest_news.html">Latest Financial News</a>
       <a href="./contact.html">Contact Us</a>
@@ -16,11 +14,12 @@
       <a href="./register_login.html" id="login">Login or Register</a>
     </div>
   </nav>
-
-
-  <section class="splash-main">
+<body>
+  
+   <section class="splash-main-index">
     <p>FINTECH TRADING <br>- START YOUR INVESTMENTS TODAY!</p>
     <button class="get-started"> Get Started!</button>
+    
   </section>
 
   <section class="below-splash-main">
@@ -33,23 +32,20 @@
       recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias
       consequatur aut perferendis doloribus asperiores repellat."</p>
   </section>
-  </section>
-  </section>
 </body>
-<footer>Year 3 Group Project - Munster Technological University
-  <ul class="footer-list">
-    <li><a href="./index.html">Home</a></li>
-    <li><a href="./register_login.html">Login or Register</a></li>
-    <li><a href="./about.html">About</a></li>
-    <li><a href="./contact.html">Contact</a></li>
-    0
+<footer>Year 3 Group Project - <br> Munster Technological University
+<ul class="footer-list">
+  <li><a href="./index.html">Home</a></li>
+  <li><a href="./register_login.html">Login or Register</a></li>
+  <li><a href="./about.html">About</a></li>
+  <li><a href="./contact.html">Contact</a></li>
+
+</ul>
 </footer>
-
-</html>
-
+  </html>
+  
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 <script>
 </script>
 </body>
-
 </html>
