--- a/public/contact.html
+++ b/public/contact.html
@@ -46,7 +46,7 @@
   </section>
 </section>
 </body>
-<footer>Year 3 Group Project - Munster Technological University
+<footer>Year 3 Group Project - <br> Munster Technological University
 <ul class="footer-list">
   <li><a href="./index.html">Home</a></li>
   <li><a href="./register_login.html">Login or Register</a></li>
