--- a/public/latest_news.html
+++ b/public/latest_news.html
@@ -9,39 +9,48 @@
 
 <body>
   <nav class="topnav">
-      <a class="active" href="./index.html">Home</a>
-      <a href="./latest_news.html">Latest Financial News</a>
-      <a href="./contact.html">Contact Us</a>
-    <div id = "login">
+    <a class="active" href="./index.html">Home</a>
+    <a href="./latest_news.html">Latest Financial News</a>
+    <a href="./contact.html">Contact Us</a>
+    <div id="login">
       <a href="./register_login.html" id="login">Login or Register</a>
     </div>
   </nav>
 
- 
-      <section class = "splash-main">
-        <p>Latest Financial News</p>
-<img class = "financial-info" src="https://thumbs.dreamstime.com/z/finance-concept-newspaper-headline-financial-information-finance-concept-newspaper-headline-financial-information-white-121636792.jpg">
-        </section>
-      
-        <section class = "below-splash-main">
-          <p>"At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat."</p>
-          </section>
-      </section>
-    </section>
+
+  <section class="splash-main">
+    <p>Latest Financial News</p>
+    <img class="financial-info"
+      src="https://thumbs.dreamstime.com/z/finance-concept-newspaper-headline-financial-information-finance-concept-newspaper-headline-financial-information-white-121636792.jpg">
+  </section>
+
+  <section class="below-splash-main">
+    <a class="twitter-timeline" href="https://twitter.com/Benzinga?ref_src=twsrc%5Etfw">Tweets by Benzinga</a>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8">
+    </script>
+    <a class="twitter-timeline" href="https://twitter.com/bespokeinvest?ref_src=twsrc%5Etfw">Tweets by bespokeinvest</a>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <a class="twitter-timeline" href="https://twitter.com/IBDinvestors?ref_src=twsrc%5Etfw">Tweets by IBDinvestors</a>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  </section>
+
+</section>
 </body>
 <footer>Year 3 Group Project - Munster Technological University
   <ul class="footer-list">
-      <li><a href="./index.html">Home</a></li>
-      <li><a href="./register_login.html">Login or Register</a></li>
-      <li><a href="./about.html">About</a></li>
-      <li><a href="./contact.html">Contact</a></li>
+    <li><a href="./index.html">Home</a></li>
+    <li><a href="./register_login.html">Login or Register</a></li>
+    <li><a href="./about.html">About</a></li>
+    <li><a href="./contact.html">Contact</a></li>
 
   </ul>
 </footer>
-      </html>
-      
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-  <script>
-  </script>
+
+</html>
+
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+<script>
+</script>
 </body>
+
 </html>
