--- a/public/register_login.html
+++ b/public/register_login.html
@@ -37,19 +37,19 @@
       </section>
     </section>
 </body>
-<footer>Year 3 Group Project - Munster Technological University
-  <ul class="footer-list">
-      <li><a href="./index.html">Home</a></li>
-      <li><a href="./register_login.html">Login or Register</a></li>
-      <li><a href="./about.html">About</a></li>
-      <li><a href="./contact.html">Contact</a></li>
+<footer>Year 3 Group Project - <br> Munster Technological University
+<ul class="footer-list">
+  <li><a href="./index.html">Home</a></li>
+  <li><a href="./register_login.html">Login or Register</a></li>
+  <li><a href="./about.html">About</a></li>
+  <li><a href="./contact.html">Contact</a></li>
 
-  </ul>
+</ul>
 </footer>
-      </html>
-      
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-  <script>
-  </script>
+  </html>
+  
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+<script>
+</script>
 </body>
 </html>
