--- a/public/contact.html
+++ b/public/contact.html
@@ -22,14 +22,19 @@
         in the form below.
         <br><br>A customer support representative will get back to you shortly.</p>
     
-<div class="form">
+<div class="contact_form">
 <form action="/action_page.php">
   <label for="fname">First Name</label>
   <input type="text" id="fname" name="firstname" placeholder="Name">
+
   <label for="lname">Last Name</label>
   <input type="text" id="lname" name="lastname" placeholder="Surname">
+
+  <label for="E-Mail">Email</label>
+  <input type="text" id="E-Mail" name="email" placeholder="Email Address">
+
   <label for="subject">Subject</label>
-  <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+  <textarea id="subject" name="subject" placeholder="What's your query?"></textarea>
 
   <input type="submit" value="Submit">
     </section>
