--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       <a href="./latest_news.html">Latest Financial News</a>
       <a href="./contact.html">Contact Us</a>
     <div id = "login">
-      <a href="./register_login.html" id="login">Login or Register</a>
+      <a href="./login_register.html" id="login">Login or Register</a>
     </div>
   </nav>
 <body>
