move to thinkpad

--- a/public/register_login.html
+++ b/public/register_login.html
@@ -23,9 +23,8 @@
           <input type="email" id="email" placeholder="Email">
           <input type="password" id="password" placeholder="Password">
           </div>
-            <button id="loginBtn"> Login </button>
+            <button id="loginBtn" onclick="loginUser()" > Login </button>
             <button id = "registerBtn"> Register </button>
-
         </div>
   </div>
 
