--- a/public/register_login.html
+++ b/public/register_login.html
@@ -17,16 +17,29 @@
     </div>
   </nav>
 
-  <div id="form_container">
-    <h1 id="form_header">Login</h1>
-        <div id="form">
-          <input type="email" id="email" placeholder="Email">
-          <input type="password" id="password" placeholder="Password">
-          </div>
-            <button id="loginBtn" onclick="loginUser()" > Login </button>
-            <button id = "registerBtn"> Register </button>
-        </div>
-  </div>
+  <form>
+    <div class="container">
+      <h1>Register</h1>
+      <p>Please fill in this form to create an account.</p>
+      <hr>
+
+      <label for="email"><b>Email</b></label>
+      <input type="text" placeholder="Enter Email" name="email" id="email" required>
+
+      <label><b>Password</b></label>
+      <input type="password" placeholder="Password" name="pass" id="pass" required>
+
+      <hr>
+      <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
+
+      <button type="button" id="loginBtn" name="loginUser" class="loginbtn">Login</button>
+      <button type="button" id="registerBtn" name="submitData" class="registerbtn">Register</button>
+    </div>
+
+    <div class="container signin">
+      <p>Already have an account? <a href="#">Sign in</a>.</p>
+    </div>
+  </form>
 
   </div>
   <section class="below-splash-main">
@@ -52,7 +65,121 @@
 
 </html>
 
-<script src="index.js" type="module"></script>
+<script type="module">
+  import { 
+    initializeApp 
+  
+} from "https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js";
+
+  import {
+    getAuth,
+    createUserWithEmailAndPassword,
+    signInWithEmailAndPassword,
+    signOut
+  } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-auth.js";
+
+  import { 
+    getDatabase, 
+    set,
+    ref,
+    update } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-database.js";
+
+  const firebaseConfig = {
+
+    databaseURL: "https://year-3-group-project-default-rtdb.europe-west1.firebasedatabase.app",
+    apiKey: "AIzaSyDo2rpRZv9SlKaSINJwpN5Znf0684sccW4",
+    authDomain: "year-3-group-project.firebaseapp.com",
+    databaseURL: "https://year-3-group-project-default-rtdb.europe-west1.firebasedatabase.app",
+    projectId: "year-3-group-project",
+    storageBucket: "year-3-group-project.appspot.com",
+    messagingSenderId: "345845091768",
+    appId: "1:345845091768:web:08424889bff275e341934d",
+    measurementId: "G-E53ZGGY217"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const auth = getAuth();
+  const db = getDatabase(app);
+
+  var email = document.getElementById('email').value;
+  var password = document.getElementById('pass').value;
+
+  registerBtn.addEventListener('click', (a) => {
+
+
+    //sign up user
+    createUserWithEmailAndPassword(auth, email, password)
+      .then((userCredential) => {
+        // Signed in
+        const user = userCredential.user;
+        // ... user.uid
+        set(ref(db, 'users/' + user.uid), {
+          email: email,
+          password: password
+        })
+          .then(() => {
+            // Data saved successfully!
+            alert('User created successfully');
+
+          })
+          .catch((error) => {
+            // The write failed...
+            alert("Bad email");
+          });
+      })
+
+      .catch((error) => {
+        const errorCode = error.code;
+        const errorMessage = error.message;
+        console.log(errorMessage)
+        // ..
+        if(!email.value === null || password.length < 6){
+          alert("One or more inputs aren't working")
+          alert(errorMessage)
+        }
+       // alert("Username or password not typed properly. Please check your inputs and try again.");
+      });
+    })
+
+loginBtn.addEventListener('click', (e) => {
+
+    // log in user
+    signInWithEmailAndPassword(auth, email, password)
+      .then((userCredential) => {
+        // Signed in
+        const user = userCredential.user;
+        // ...
+
+        // save log in details into real time database
+        var lgDate = new Date();
+        update(ref(db, 'users/' + user.uid), {
+          last_login: lgDate,
+        })
+          .then(() => {
+            // Data saved successfully!
+            alert('Logged in successfully');
+
+          })
+          .catch((error) => {
+            // Failed
+            alert(error);
+          });
+      })
+      .catch((error) => {
+        const errorCode = error.code;
+        const errorMessage = error.message;
+        alert(errorMessage);
+      });
+
+    //sign out user
+    signOut(auth).then(() => {
+      // Sign-out successful.
+    }).catch((error) => {
+      // An error happened.
+    });
+  });
+</script>
 <script>
 </script>
 </body>
