--- a/public/contact.html
+++ b/public/contact.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Contact Us</title>
   <link href="style.css" rel="stylesheet" />
 </head>
 
@@ -12,7 +12,7 @@
       <a class="active" href="./index.html">Home</a>
       <a href="./latest_news.html">Latest Financial News</a>
       <a href="./contact.html">Contact Us</a>
-    <div id = "login">
+    <div id = "loginLink">
       <a href="./register_login.html" id="login">Login or Register</a>
     </div>
   </nav>
@@ -32,6 +32,9 @@
   <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
 
   <input type="submit" value="Submit">
+  </form>
+</div>
+
     </section>
   
     <section class = "below-splash-main">
@@ -43,9 +46,7 @@
       <a class="twitter-timeline" href="https://twitter.com/IBDinvestors?ref_src=twsrc%5Etfw">Tweets by IBDinvestors</a> 
       <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
       </section>
-  </section>
-</section>
-</body>
+
 <footer>Year 3 Group Project - <br> Munster Technological University
 <ul class="footer-list">
   <li><a href="./index.html">Home</a></li>
@@ -55,10 +56,7 @@
 
 </ul>
 </footer>
-  </html>
   
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-<script>
-</script>
+
 </body>
 </html>
