--- a/public/latest_news.html
+++ b/public/latest_news.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Latest News</title>
   <link href="style.css" rel="stylesheet" />
 </head>
 
@@ -12,7 +12,7 @@
     <a class="active" href="./index.html">Home</a>
     <a href="./latest_news.html">Latest Financial News</a>
     <a href="./contact.html">Contact Us</a>
-    <div id="login">
+    <div id="loginLink">
       <a href="./register_login.html" id="login">Login or Register</a>
     </div>
   </nav>
@@ -20,7 +20,7 @@
 
   <section class="splash-main">
     <p>Latest Financial News</p>
-    <img class="financial-info"
+    <img class="financial-info" alt="Newspaper"
       src="https://thumbs.dreamstime.com/z/finance-concept-newspaper-headline-financial-information-finance-concept-newspaper-headline-financial-information-white-121636792.jpg">
   </section>
 
@@ -34,23 +34,14 @@
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   </section>
 
-</section>
-</body>
-<footer>Year 3 Group Project - Munster Technological University
-  <ul class="footer-list">
-    <li><a href="./index.html">Home</a></li>
-    <li><a href="./register_login.html">Login or Register</a></li>
-    <li><a href="./about.html">About</a></li>
-    <li><a href="./contact.html">Contact</a></li>
-
-  </ul>
-</footer>
-
-</html>
-
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-<script>
-</script>
-</body>
-
-</html>
+  <footer>Year 3 Group Project - <br> Munster Technological University
+    <ul class="footer-list">
+      <li><a href="./index.html">Home</a></li>
+      <li><a href="./register_login.html">Login or Register</a></li>
+      <li><a href="./about.html">About</a></li>
+      <li><a href="./contact.html">Contact</a></li>
+    
+    </ul>
+    </footer>
+  </body>
+  </html>
