--- a/public/index.html
+++ b/public/index.html
@@ -3,22 +3,23 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Home</title>
   <link href="style.css" rel="stylesheet" />
 </head>
+
+<body>
 <nav class="topnav">
       <a class="active" href="./index.html">Home</a>
       <a href="./latest_news.html">Latest Financial News</a>
       <a href="./contact.html">Contact Us</a>
-    <div id = "login">
+    <div id = "loginLink">
       <a href="./register_login.html" id="login">Login or Register</a>
     </div>
   </nav>
-<body>
   
    <section class="splash-main-index">
     <p>FINTECH TRADING <br>- START YOUR INVESTMENTS TODAY!</p>
-    <button class="get-started"> Get Started!</button>
+    <button class="get-started" onclick="window.location.href='./register_login.html';"> Get Started!</button>
     
   </section>
 
@@ -32,20 +33,15 @@
       recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias
       consequatur aut perferendis doloribus asperiores repellat."</p>
   </section>
-</body>
-<footer>Year 3 Group Project - <br> Munster Technological University
-<ul class="footer-list">
-  <li><a href="./index.html">Home</a></li>
-  <li><a href="./register_login.html">Login or Register</a></li>
-  <li><a href="./about.html">About</a></li>
-  <li><a href="./contact.html">Contact</a></li>
 
-</ul>
-</footer>
-  </html>
+<footer>Year 3 Group Project - <br> Munster Technological University
+  <ul class="footer-list">
+    <li><a href="./index.html">Home</a></li>
+    <li><a href="./register_login.html">Login or Register</a></li>
+    <li><a href="./about.html">About</a></li>
+    <li><a href="./contact.html">Contact</a></li>
   
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-<script>
-</script>
+  </ul>
+  </footer>
 </body>
 </html>
