--- a/public/contact.html
+++ b/public/contact.html
@@ -23,13 +23,14 @@
         <br><br>A customer support representative will get back to you shortly.</p>
     
 <div class="form">
-<form action="/action_page.php">
-  <label for="fname">First Name</label>
-  <input type="text" id="fname" name="firstname" placeholder="Name">
-  <label for="lname">Last Name</label>
-  <input type="text" id="lname" name="lastname" placeholder="Surname">
-  <label for="subject">Subject</label>
-  <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+<form method="post" action="contact-form-process.php">
+  <label for="fname">Your name</label>
+  <input type="text" id="Name" name="firstname" placeholder="Name" required>
+  <label for="fname">Your email</label>
+  <input type="text" id="Email" name="Email" placeholder="Email" required>
+  
+  <label for="subject">Message</label>
+  <textarea id="Message" name="Message" placeholder="Write something.." required></textarea>
 
   <input type="submit" value="Submit">
   </form>
