--- a/public/contact.html
+++ b/public/contact.html
@@ -23,7 +23,8 @@
         <br><br>A customer support representative will get back to you shortly.</p>
     
 <div class="form">
-<form method="post" action="contact-form-process.php">
+<form method="post" 
+action="https://formspree.io/f/xkneednp">
   <label for="fname">Your name</label>
   <input type="text" id="Name" name="firstname" placeholder="Name" required>
   <label for="fname">Your email</label>
