Fixed adobe.html file

--- a/public/adobe.html
+++ b/public/adobe.html
@@ -17,7 +17,7 @@
       <a href="./register_login.html" id="login">Login or Register</a>
     </div>
   </nav>
-  <img src="./images/adobe.PNG" class="adobe">
+  <img src="./images/adobe.PNG" class="image">
   <div class="container">
     <div class="chatbox">
         <div class="chatbox__support">
