Added stocks dropdown Menu

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <title>Home</title>
   <link href="style.css" rel="stylesheet" />
   <link href="./chatbot/chatbot.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -13,6 +14,18 @@
       <a class="active" href="./index.html">Home</a>
       <a href="./latest_news.html">Latest Financial News</a>
       <a href="./contact.html">Contact Us</a>
+      <div class="dropdown">
+        <button class="dropbtn">Stocks
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <a href="./adobe.html">Adobe</a>
+          <a href="./amazon.html">Amazon</a>
+          <a href="./apple.html">Apple</a>
+          <a href="./google.html">Google</a>
+          <a href="./msft.html">MicroSoft</a>
+        </div>
+      </div>
     <div id = "loginLink">
       <a href="./register_login.html" id="login">Login or Register</a>
     </div>
