Added Crypto Assets dropdown Menu

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,15 @@
           <a href="./msft.html">MicroSoft</a>
         </div>
       </div>
+      <div class="dropdown">
+        <button class="dropbtn">Crypto Assets
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <a href="./bitcoin.html">Bitcoin</a>
+          <a href="./ethereum.html">Ethereum</a>
+        </div>
+      </div>
     <div id = "loginLink">
       <a href="./register_login.html" id="login">Login or Register</a>
     </div>
