--- a/public/adobe.html
+++ b/public/adobe.html
@@ -39,6 +39,17 @@
   </div>
 </nav>
   <img src="./stocks/adobe.PNG" class="image">
+  <br>
+  <br>
+  <a href="#" class="btn">Buy</a>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
   <div class="container">
     <div class="chatbox">
         <div class="chatbox__support">
