Added center div to center buttons

--- a/public/adobe.html
+++ b/public/adobe.html
@@ -41,7 +41,10 @@
   <img src="./stocks/adobe.PNG" class="image">
   <br>
   <br>
-  <a href="#" class="btn">Buy</a>
+  <div class="button_center">
+    <a href="#" class="btn">Buy</a>
+    <a href="#" class="btnS">Sell</a>
+  </div>
   <br>
   <br>
   <br>
