--- a/public/about.html
+++ b/public/about.html
@@ -50,10 +50,31 @@
         Rather than relying on high-paid stock brokers to advise clients, new technology enables cheaper and more accurate 
         advice through the use of AI and appropriate datasets of financial information.
     </p>
-    
-    
-
     </section>
+    <div class="container">
+      <div class="chatbox">
+          <div class="chatbox__support">
+              <div class="chatbox__header">
+  
+                  <div class="chatbox__content--header">
+                      <h4 class="chatbox__heading--header">Chat support</h4>
+                      <p class="chatbox__description--header">Hi. My name is Kryptos. How can I help you?</p>
+                  </div>
+              </div>
+              <div class="chatbox__messages">
+                  <div></div>
+              </div>
+              <div class="chatbox__footer">
+                  <input type="text" placeholder="Write a message...">
+                  <button class="chatbox__send--footer send__button">Send</button>
+              </div>
+          </div>
+          <div class="chatbox__button">
+              <button><img src="./images/chatbox-icon2.svg" /></button>
+          </div>
+      </div>
+  </div>
+      <script src="./chatbot/chatbot.js"></script>
 
 <footer>Year 3 Group Project - <br> Munster Technological University
     <ul class="footer-list">
