implemented membership tier site

--- a/public/contact.html
+++ b/public/contact.html
@@ -12,6 +12,8 @@
       <a class="active" href="./index.html">Home</a>
       <a href="./latest_news.html">Latest Financial News</a>
       <a href="./contact.html">Contact Us</a>
+      <a href="./membership.html">Membership Options</a>
+
     <div id = "loginLink">
       <a href="./register_login.html" id="login">Login or Register</a>
     </div>
@@ -39,16 +41,7 @@ action="https://formspree.io/f/xkneednp">
 
     </section>
   
-    <section class = "below-splash-main">
-      <a class="twitter-timeline" href="https://twitter.com/Benzinga?ref_src=twsrc%5Etfw">Tweets by Benzinga</a> 
-      <script async src="https://platform.twitter.com/widgets.js" charset="utf-8">
-      </script> 
-      <a class="twitter-timeline" href="https://twitter.com/bespokeinvest?ref_src=twsrc%5Etfw">Tweets by bespokeinvest</a> 
-      <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
-      <a class="twitter-timeline" href="https://twitter.com/IBDinvestors?ref_src=twsrc%5Etfw">Tweets by IBDinvestors</a> 
-      <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
-      </section>
-
+    
 <footer>Year 3 Group Project - <br> Munster Technological University
 <ul class="footer-list">
   <li><a href="./index.html">Home</a></li>
