--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
       <a class="active" href="./index.html">Home</a>
       <a href="./latest_news.html">Latest Financial News</a>
       <a href="./contact.html">Contact Us</a>
+      <a href="./membership.html">Membership Options</a>
+
     <div id = "loginLink">
       <a href="./register_login.html" id="login">Login or Register</a>
     </div>
