--- a/public/register_login.html
+++ b/public/register_login.html
@@ -17,15 +17,12 @@
     <a href="./contact.html">Contact Us</a>
     <div id="loginLink">
       <a href="./register_login.html" id="login">Sign In / Sign Up</a>
-      <div id="WelcomeUser">Welcome, <p id='userDetails'></p>
-      </div>
     </div>
   </nav>
   <section class="splash-main">
-
+    <p>REGISTER</p>
     <form>
       <div class="form">
-        <h1>Register</h1>
         <p>Please fill in this form to create an account.</p>
         <hr>
 
@@ -35,9 +32,9 @@
         <input type="password" placeholder="Password" name="pass" id="pass" required>
         <hr>
         <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
-        <button type="button" id="loginBtn" name="loginUser" class="loginbtn">Login</button>
+        <div class="loginRegisterBtns"><button type="button" id="loginBtn" name="loginUser" class="loginbtn">Login</button>
         <button type="button" id="submitData" name="submitData" class="registerbtn">Register</button>
-        <button id="googleLogin">Login with Google</button>
+        <button id="googleLogin">Login with Google</button></div>
       </div>
       </div>
     </form>
@@ -60,6 +57,7 @@
       <li><a href="./register_login.html">Login or Register</a></li>
       <li><a href="./about.html">About</a></li>
       <li><a href="./contact.html">Contact</a></li>
+      <a href="./membership.html">Membership Options</a>
 
     </ul>
   </footer>
@@ -72,7 +70,6 @@
 
   import {
     initializeApp
-
   } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js";
 
   import {
@@ -83,7 +80,7 @@
     signInWithPopup,
     onAuthStateChanged,
     showUserDetails,
-    checkAuthState,firebase use --add
+    checkAuthState,
     signOut
   } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-auth.js";
 
@@ -121,53 +118,32 @@
   document.getElementById('userDetails').addEventListener('click', showUserDetails);
 
   function GoogleLogin() {
-    firebase.auth().signInWithPopup(provider).then(function (result) {
-      // This gives you a Google Access Token. You can use it to access the Google API.
-      
-      showUserDetails(res.user);
-      var token = result.credential.accessToken;
-      // The signed-in user info.
-      var user = result.user;
-      // ...
-
-    })
-      .catch(function (error) {
-        // Handle Errors here.
-        var errorCode = error.code;
-        var errorMessage = error.message;
-        // The email of the user's account used.
-        var email = error.email;
-        // The firebase.auth.AuthCredential type that was used.
-        var credential = error.credential;
-        // ...
-      });
-  };
-
-  function showUserDetails(user) {
-    console.log("FASFSAFAS")
-    document.getElementById('userDetails').innerHTML = "${user}"
+    const auth = getAuth();
+    signInWithPopup(auth, provider).then((result) => {
+    // This gives you a Google Access Token. You can use it to access the Google API.
+    const credential = GoogleAuthProvider.credentialFromResult(result);
+    const token = credential.accessToken;
+    // The signed-in user info.
+    const user = result.user;
+    // ...
+  }).catch((error) => {
+    // Handle Errors here.
+    const errorCode = error.code;
+    const errorMessage = error.message;
+    // The email of the user's account used.
+    const email = error.customData.email;
+    // The AuthCredential type that was used.
+    const credential = GoogleAuthProvider.credentialFromError(error);
+    // ...
+  })
   }
-
-  function checkAuthState() {
-    firebase.auth().onAuthStateChanged(user => {
-      if (user) {
-        s
-        showUserDetails(user)
-      } else {
-
-      }
-    })
-  }
-
-
-
   submitData.addEventListener('click', (e) => {
 
     var email = document.getElementById('email').value;
     var password = document.getElementById('pass').value;
 
     //sign up user
-    createUserWithEmailAndPassword(auth, email, password)
+    firebase.auth().createUserWithEmailAndPassword(auth, email, password)
       .then((userCredential) => {
         // Signed in
         const user = userCredential.user;
@@ -212,7 +188,7 @@
         })
           .then(() => {
             // Data saved successfully!
-            alert('user logged in successfully');
+            alert('User logged in successfully');
 
           })
           .catch((error) => {
@@ -223,7 +199,7 @@
       .catch((error) => {
         const errorCode = error.code;
         const errorMessage = error.message;
-        alert("signinerror");
+        alert("Signin error");
       });
 
     //sign out user
@@ -233,6 +209,7 @@
       // An error happened.
     });
   });
+  
 
 </script>
 </body>
