Added buy and sell buttons to cart onto website

--- a/public/adobe.html
+++ b/public/adobe.html
@@ -61,9 +61,9 @@
         <div class="total-price">€0</div>
       </div>
       <!--Buy Button-->
-      <button type="button" class="btn-buy">Buy</button>
+      <button type="button" class="btn-buy">Buy Now</button>
       <!--Sell Button-->
-      <button type="button1" class="btn-sell">Sell</button>
+      <button type="button1" class="btn-sell">Sell Now</button>
       <!--Cart Close-->
       <i class='bx bx-x' id="cart-close"></i>
     </div>
