Added Cart functionality to apple.html

--- a/public/amazon.html
+++ b/public/amazon.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Adobe</title>
+  <title>Amazon</title>
   <link href="./style.css" rel="stylesheet" />
   <link href="./chatbot/chatbot.css" rel="stylesheet"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
