Added Cart functionality to google.html

--- a/public/adobe.html
+++ b/public/adobe.html
@@ -53,7 +53,7 @@
       <!--Buy Button-->
       <button type="button" class="btn-buy">Buy Now</button>
       <!--Sell Button-->
-      <button type="button1" class="btn-sell">Sell Now</button>
+      <button type="button" class="btn-sell">Sell Now</button>
       <!--Cart Close-->
       <i class='bx bx-x' id="cart-close"></i>
         <script src="./cart.js"></script>
