--- a/public/register_login.html
+++ b/public/register_login.html
@@ -66,33 +66,29 @@
 </body>
 
 </html>
+
 <script type="module">
+  import { 
+    initializeApp 
+  
+} from "https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js";
 
   import {
-    initializeApp
-  } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js";
-
-  import {
-    GoogleAuthProvider,
     getAuth,
     createUserWithEmailAndPassword,
     signInWithEmailAndPassword,
-    signInWithPopup,
-    onAuthStateChanged,
-    showUserDetails,
-    checkAuthState,
     signOut
   } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-auth.js";
 
-  import {
-    getDatabase,
+  import { 
+    getDatabase, 
     set,
     ref,
-    update
-  } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-database.js";
+    update } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-database.js";
 
   const firebaseConfig = {
 
+    databaseURL: "https://year-3-group-project-default-rtdb.europe-west1.firebasedatabase.app",
     apiKey: "AIzaSyDo2rpRZv9SlKaSINJwpN5Znf0684sccW4",
     authDomain: "year-3-group-project.firebaseapp.com",
     databaseURL: "https://year-3-group-project-default-rtdb.europe-west1.firebasedatabase.app",
@@ -101,116 +97,85 @@
     messagingSenderId: "345845091768",
     appId: "1:345845091768:web:08424889bff275e341934d",
     measurementId: "G-E53ZGGY217"
-
   };
-  if (!firebase.apps.length) {
-    firebase.initializeApp(firebaseConfig)
-  }
 
   // Initialize Firebase
   const app = initializeApp(firebaseConfig);
-  const auth = getAuth();
-  const database = getDatabase(app);
-
-
-  let provider = new firebase.auth.GoogleAuthProvider();
-  document.getElementById('googleLogin').addEventListener('click', GoogleLogin);
-  document.getElementById('userDetails').addEventListener('click', showUserDetails);
-
-  function GoogleLogin() {
     const auth = getAuth();
-    signInWithPopup(auth, provider).then((result) => {
-    // This gives you a Google Access Token. You can use it to access the Google API.
-    const credential = GoogleAuthProvider.credentialFromResult(result);
-    const token = credential.accessToken;
-    // The signed-in user info.
-    const user = result.user;
-    // ...
-  }).catch((error) => {
-    // Handle Errors here.
-    const errorCode = error.code;
-    const errorMessage = error.message;
-    // The email of the user's account used.
-    const email = error.customData.email;
-    // The AuthCredential type that was used.
-    const credential = GoogleAuthProvider.credentialFromError(error);
-    // ...
-  })
-  }
-  submitData.addEventListener('click', (e) => {
+    const database = getDatabase(app);
 
-    var email = document.getElementById('email').value;
-    var password = document.getElementById('pass').value;
+    submitData.addEventListener('click', (e) => {
 
-    //sign up user
-    firebase.auth().createUserWithEmailAndPassword(auth, email, password)
-      .then((userCredential) => {
-        // Signed in
-        const user = userCredential.user;
-        // ... user.uid
-        set(ref(database, 'users/' + user.uid), {
-          email: email,
-          password: password
-        })
-          .then(() => {
-            // Data saved successfully!
-            alert('user created successfully');
+        var email = document.getElementById('email').value;
+        var password = document.getElementById('pass').value;
 
-          })
-          .catch((error) => {
-            // The write failed...
-            alert(error);
+        //sign up user
+        createUserWithEmailAndPassword(auth, email, password)
+            .then((userCredential) => {
+                // Signed in
+                const user = userCredential.user;
+                // ... user.uid
+                set(ref(database, 'users/' + user.uid), {
+                    email: email,
+                    password: password
+                })
+                    .then(() => {
+                        // Data saved successfully!
+                        alert('user created successfully');
+        
+                    })
+                    .catch((error) => {
+                        // The write failed...
+                        alert(error);
+                    });
+            })
+            .catch((error) => {
+                const errorCode = error.code;
+                const errorMessage = error.message;
+                // ..
+                alert(errorMessage);
+            });
           });
-      })
-      .catch((error) => {
-        const errorCode = error.code;
-        const errorMessage = error.message;
-        // ..
-        alert(errorMessage);
-      });
-  });
 
-  loginBtn.addEventListener('click', (e) => {
+          loginBtn.addEventListener('click', (e) => {
 
-    var email = document.getElementById('email').value;
-    var password = document.getElementById('pass').value;
-    // log in user
-    signInWithEmailAndPassword(auth, email, password)
-      .then((userCredential) => {
-        // Signed in
-        const user = userCredential.user;
-        // ...
+var email = document.getElementById('email').value;
+var password = document.getElementById('pass').value;
+        // log in user
+        signInWithEmailAndPassword(auth, email, password)
+            .then((userCredential) => {
+                // Signed in
+                const user = userCredential.user;
+                // ...
 
-        // save log in details into real time database
-        var lgDate = new Date();
-        update(ref(database, 'users/' + user.uid), {
-          last_login: lgDate,
-        })
-          .then(() => {
-            // Data saved successfully!
-            alert('User logged in successfully');
+                // save log in details into real time database
+                var lgDate = new Date();
+                update(ref(database, 'users/' + user.uid), {
+                    last_login: lgDate,
+                })
+                    .then(() => {
+                        // Data saved successfully!
+                        alert('user logged in successfully');
 
-          })
-          .catch((error) => {
-            // The write failed...
-            alert(error);
-          });
-      })
-      .catch((error) => {
-        const errorCode = error.code;
-        const errorMessage = error.message;
-        alert("Signin error");
-      });
+                    })
+                    .catch((error) => {
+                        // The write failed...
+                        alert(error);
+                    });
+            })
+            .catch((error) => {
+                const errorCode = error.code;
+                const errorMessage = error.message;
+                alert("signinerror");
+            });
 
-    //sign out user
-    signOut(auth).then(() => {
-      // Sign-out successful.
-    }).catch((error) => {
-      // An error happened.
+        //sign out user
+        signOut(auth).then(() => {
+               // Sign-out successful.
+        }).catch((error) => {
+            // An error happened.
+        });
     });
-  });
-  
-
 </script>
 </body>
 
