login/register working again

--- a/public/register_login.html
+++ b/public/register_login.html
@@ -156,6 +156,7 @@ var password = document.getElementById('pass').value;
                     .then(() => {
                         // Data saved successfully!
                         alert('user logged in successfully');
+                        window.location.assign('./profile.html')
 
                     })
                     .catch((error) => {
