--- a/public/adobe.html
+++ b/public/adobe.html
@@ -48,7 +48,7 @@
       <!--Total-->
       <div class="total">
         <div class="total-title">Total</div>
-        <div class="total-price">€0</div>
+        <div class="total-price">$0</div>
       </div>
       <!--Buy Button-->
       <button type="button" class="btn-buy">Buy Now</button>
@@ -62,40 +62,13 @@
 <section class="stock container">
     <img src="./stocks/adobe.PNG" class="image">
     <h2 class="stock-title">Adobe</h2>
-    <h4 class="stock-price">€700</h4>
+    <h4 class="stock-price">$700</h4>
     <i class='bx bxs-shopping-bag' id="add-cart"></i>
 </section>
 <br>
 <br>
 <br>
 <br>
-  <div class="container">
-    <div class="chatbox">
-        <div class="chatbox__support">
-            <div class="chatbox__header">
-
-                <div class="chatbox__content--header">
-                    <h4 class="chatbox__heading--header">Chat support</h4>
-                    <p class="chatbox__description--header">Hi. My name is Kryptos. How can I help you?</p>
-                </div>
-            </div>
-            <div class="chatbox__messages">
-                <div></div>
-            </div>
-            <div class="chatbox__footer">
-                <input type="text" placeholder="Write a message...">
-                <button class="chatbox__send--footer send__button">Send</button>
-            </div>
-        </div>
-        <div class="chatbox__button">
-            <button><img src="./images/chatbox-icon2.svg" /></button>
-        </div>
-    </div>
-</div>
-    <script src="./chatbot/chatbot.js"></script>
-    <br>
-    <br>
-    <br>
 <footer>Year 3 Group Project - <br> Munster Technological University
   <ul class="footer-list">
     <li><a href="./index.html">Home</a></li>
