Adjusted prices for stocks

--- a/public/amazon.html
+++ b/public/amazon.html
@@ -48,7 +48,7 @@
       <!--Total-->
       <div class="total">
         <div class="total-title">Total</div>
-        <div class="total-price">€0</div>
+        <div class="total-price">$0</div>
       </div>
       <!--Buy Button-->
       <button type="button" class="btn-buy">Buy Now</button>
@@ -62,7 +62,7 @@
 <section class="stock container">
     <img src="./stocks/Amazon.PNG" class="image">
     <h2 class="stock-title">Amazon</h2>
-    <h4 class="stock-price">€3800</h4>
+    <h4 class="stock-price">$88.04</h4>
     <i class='bx bxs-shopping-bag' id="add-cart"></i>
 </section>
 <br>
