--- a/public/apple.html
+++ b/public/apple.html
@@ -62,7 +62,7 @@
 <section class="stock container">
     <img src="./stocks/Apple.PNG" class="image">
     <h2 class="stock-title">Amazon</h2>
-    <h4 class="stock-price">€175</h4>
+    <h4 class="stock-price">$137.35</h4>
     <i class='bx bxs-shopping-bag' id="add-cart"></i>
 </section>
 <br>
