--- a/public/bitcoin.html
+++ b/public/bitcoin.html
@@ -62,7 +62,7 @@
 <section class="stock container">
     <img src="./crypto/Bitcoin.PNG" class="image">
     <h2 class="stock-title">Bitcoin</h2>
-    <h4 class="stock-price">€70000</h4>
+    <h4 class="stock-price">$16819</h4>
     <i class='bx bxs-shopping-bag' id="add-cart"></i>
 </section>
 <br>
