--- a/public/ethereum.html
+++ b/public/ethereum.html
@@ -62,7 +62,7 @@
 <section class="stock container">
     <img src="./crypto/Ethereum.PNG" class="image">
     <h2 class="stock-title">Ethereum</h2>
-    <h4 class="stock-price">€5000</h4>
+    <h4 class="stock-price">$1194.71</h4>
     <i class='bx bxs-shopping-bag' id="add-cart"></i>
 </section>
 <br>
