--- a/public/google.html
+++ b/public/google.html
@@ -62,7 +62,7 @@
 <section class="stock container">
     <img src="./stocks/Google.PNG" class="image">
     <h2 class="stock-title">Google</h2>
-    <h4 class="stock-price">€3000</h4>
+    <h4 class="stock-price">$90.58</h4>
     <i class='bx bxs-shopping-bag' id="add-cart"></i>
 </section>
 <br>
