--- a/public/msft.html
+++ b/public/msft.html
@@ -62,7 +62,7 @@
 <section class="stock container">
     <img src="./stocks/MSFT.PNG" class="image">
     <h2 class="stock-title">MicroSoft</h2>
-    <h4 class="stock-price">€350</h4>
+    <h4 class="stock-price">$248.53</h4>
     <i class='bx bxs-shopping-bag' id="add-cart"></i>
 </section>
 <br>
